# system-information

./: Cargo.toml  README.md
src/: main.rs
src/collectors/: bios.rs  cpu.rs  drives.rs  gpu.rs  mod.rs  ram.rs  security.rs  system.rs  unique.rs
src/display/: mod.rs
