[package]
name = "system-information"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = { version = "0.35.0", default-features = false, features = ["system"] }
winreg = "0.55.0"
serde = { version = "1.0", features = ["derive"] }
wmi = "0.17.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
